--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "homepage": "https://github.com/synle/sequelize-typescript-decorators#readme",
   "dependencies": {
-    "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.5",
     "typescript": "^3.8.3"
@@ -33,5 +32,13 @@
   "devDependencies": {
     "@types/sequelize": "^4.28.8",
     "prettier": "1.19.1"
+  },
+  "peerDependencies": {
+    "mariadb": "^2.2.0",
+    "mysql2": "^2.1.0",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sqlite3": "^4.1.1",
+    "tedious": "^8.0.1"
   }
 }
