--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index",
   "scripts": {
     "build": "./node_modules/.bin/tsc",
-    "format": "./node_modules/.bin/prettier --write index.ts",
+    "format": "npx prettier --write **/*.ts",
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
@@ -26,19 +26,18 @@
   "homepage": "https://github.com/synle/sequelize-typescript-decorators#readme",
   "dependencies": {
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.5",
-    "typescript": "^3.8.3"
+    "sequelize": "^6.3.4",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "@types/sequelize": "^4.28.8",
-    "prettier": "1.19.1"
+    "@types/sequelize": "^4.28.9"
   },
   "peerDependencies": {
-    "mariadb": "^2.2.0",
+    "mariadb": "^2.4.2",
     "mysql2": "^2.1.0",
-    "pg": "^7.18.2",
+    "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
-    "sqlite3": "^4.1.1",
-    "tedious": "^8.0.1"
+    "sqlite3": "^5.0.0",
+    "tedious": "^9.1.0"
   }
 }
