--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Testing Pull Request
+name: Pull Request Build
 
 on:
   pull_request:
@@ -21,6 +21,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+        registry-url: https://registry.npmjs.org/
     - run: npm ci
-    - run: npm run build
     - run: npm test
+    - run: npm run build
+    - run: node publishBetaTags.js
+    - run: cat package.json
+    - run: npm publish --tag beta
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
