--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: https://registry.npmjs.org/
-    - run: npm ci
+    - run: npm install
     - run: npm test
     - run: npm run build
     - run: node publishBetaTags.js
